# notion-uploader

./: .envrc  .gitignore  Makefile  README.md  SETUP.md  create_global_wrapper.sh  env.example  install.sh  pyproject.toml  requirements.txt  sample-document.md
notion_uploader/: __init__.py  cli.py  core.py
tests/: test.md  test_core.py
